force-app/main/default/objects/BatchManager__c/BatchManager__c.object-meta.xml
<CustomObject>
    <label>Batch Manager</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>