force-app/main/default/objects/BatchManager__c/fields/ExecuteCode__c.field-meta.xml
<CustomField>
    <fullName>ExecuteCode__c</fullName>
    <label>ExecuteCode</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>