force-app/main/default/objects/BatchManager__c/fields/ScopeSize__c.field-meta.xml
<CustomField>
    <fullName>ScopeSize__c</fullName>
    <label>Scope Size</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>